# pyelf

./: .coverage  .coveragerc  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  pyelf_test.py  requirements-test.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst  make.bat  pyelf.rst
pyelf/: __init__.py  cli.py  pyelf.py
src/: cli.py  pyelf_test.py
src/pyelf/: __init__.py  parser.py  pyelf.py  tagged_type.py
test_input/: CMakeLists.txt  big_endian.elf  build.sh  dummy_0.h  input.elf  little_endian.elf  main.c
tests/: CMakeLists.txt  build.sh  crt0.S  dummy_0.c  linker.ld  main.c
