[metadata]
name = pyelf
version = 0.1.0
author = Guillaume Sottas
author_email = guillaumesottas@gmail.com
description = Utility to gather information from ELF files.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sauci/pyelf
project_urls =
    Bug Tracker = https://github.com/Sauci/pyelf/issues
classifiers =
    License :: OSI Approved :: MIT License
[options]
package_dir =
    = src
packages = find:
python_requires = >= 2.7.14

[options.packages.find]
where = src
